--- a/email-templates/uspto-sou.ejs
+++ b/email-templates/uspto-sou.ejs
@@ -342,19 +342,30 @@
                         <tr style="border-collapse:collapse;"> 
                          <td align="left" style="padding:0;Margin:0;padding-top:20px;" mc:edit="block_6"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:16px;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;color:#333333;">
                          
-                          This is to inform you that no opposition was filed for the published application: 
-                          <br><br><strong>
-                          Trademark Name: <%= mailData.trademark.name %> <br>
-                          Application Number: <%= mailData.serialNumber %> </strong>
+                          We have good news for you: Your U.S. trademark application is making good progress, and the examiner in charge of your application has already issues a “Notice of Allowance” which means that there are no major obstacles for your application to mature to an actual registration.
+                          <br><br>
+                          However, unlike many other jurisdictions, the rules of the United States Patent and Trademark Office require that your start using your trademark for it to become eligible for registration, and you submit a sworn declaration, together with proof that your product or service actually exists (called “Specimen”).
                          <br><br>
-                         According to the rules of the United States Patent and Trademark Office (USPTO), you must declare the use of your trademark by filing a “Statement of Use” for your trademark application. 
-                         <br><br>
-                         What are the requirements for the filing a Statement of Use (SOU) for your trademark application?
+                         I have prepared the following link for you:
+                         
                          <br><br>
                          <a href="https://www.trademarkers.com/<%= mailData.number %>/statement-of-use" style="text-decoration:none;font-family:roboto,'helvetica neue',helvetica,arial,sans-serif;font-size:18px;color:#ffffff;border-style:solid;border-color:#1475a9;border-width:10px 20px 10px 20px;display:block;background:#1475a9;border-radius:25px;font-weight:normal;font-style:normal;line-height:22px;width:auto;text-align:center;border-left-width:0px;border-right-width:0px" target="_blank" >
-                          FILE STATEMENT OF USE
+                          Review Options
                           </a>
-                         </p></td> 
+
+                          <br><br>
+
+                          which includes some more explanations and options for you what to do even if you currently have not yet started using the mark in commerce. Please review it carefully, as the worst thing you could possibly do is not to respond, in which case your application will “abandon” (and all your rights will be cancelled without any refund).
+
+                          <br><br>
+
+                          Best regards,
+                          <br><br>
+
+                          TRADEMARKERS LLC<br>
+                          Registration Services<br>
+                          www.trademarkers.com<br>
+                         </p></td>
                         
                         </tr> 
                        
