--- a/views/trademark-order/payment.ejs
+++ b/views/trademark-order/payment.ejs
@@ -13,7 +13,7 @@
               <strong><%= flash.error %></strong>
           </div>
       <% } %>
-        <h1 class="h1"><strong>Payment Page (sandbox mode)</strong></h1>
+        <h1 class="h1"><strong>Payment Page</strong></h1>
         <hr>
       </div>
 
