--- a/views/trademark-order/payment.ejs
+++ b/views/trademark-order/payment.ejs
@@ -87,7 +87,7 @@
           
           <form action="/checkout/form" method="POST" >
             
-            <input type="text" class="form-control" name="action" value="client">
+            <input type="hidden" class="form-control" name="action" value="client">
             <div class="form-group">
               <label>
                   <b> Client Name </b>
