--- a/views/layouts/public-layout-interactive.ejs
+++ b/views/layouts/public-layout-interactive.ejs
@@ -27,6 +27,7 @@
    <!-- Favicon  -->
   <link rel="icon" href="/interactive/images/favicon.ico">
   <link href="/interactive/css/cp-style.css" rel="stylesheet">
+  
 
 </head>
 <body class="tm-sl-page tm-sl-ft-page">
@@ -59,7 +60,7 @@
   </main>
   <script src="/interactive/js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
   <script src="/interactive/js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
-
+  <script src="https://js.stripe.com/v3/"></script>
   <script>
 $( document ).ready(function() {
   $(".frm-sou").submit(function(){
