--- a/views/layouts/public-layout-interactive.ejs
+++ b/views/layouts/public-layout-interactive.ejs
@@ -60,7 +60,8 @@
   </main>
   <script src="/interactive/js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
   <script src="/interactive/js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
-  <script src="https://js.stripe.com/v3/"></script>
+  <!-- <script src="https://js.stripe.com/v3/"></script> -->
+  <!-- <script src="/javascript/pay.js"></script> -->
   <script>
 $( document ).ready(function() {
   $(".frm-sou").submit(function(){
