--- a/views/trademark-order/payment.ejs
+++ b/views/trademark-order/payment.ejs
@@ -279,7 +279,7 @@
     <script src="https://js.stripe.com/v3/"></script>
     <script>
       // Create a Stripe client.
-var stripe = Stripe('pk_test_8IWnZ5BFL6cRN27ZARs8qB9Q00PET9ihlr');
+var stripe = Stripe('<%= tkey %>');
 
 // Create an instance of Elements.
 var elements = stripe.elements();
