--- a/views/trademark-order/delivery.ejs
+++ b/views/trademark-order/delivery.ejs
@@ -52,8 +52,8 @@
                         </form> -->
                         <br>
                         <br>
-                        <a class="btn btn-primary btn-register" style="font-size: 18px;" href="/delivery-method/<%= trademark.id %>/regular">Regular Mail (Free)</a>
-                        <a class="btn btn-primary btn-register" style="font-size: 18px;" href="/delivery-method/<%= trademark.id %>/regular">FedEx ($80)</a>
+                        <a class="btn btn-red" style="font-size: 18px;" href="/delivery-method/<%= trademark.id %>/regular">Regular Mail (Free)</a>
+                        <a class="btn btn-red" style="font-size: 18px;" href="/<%= trademark.id %>/pay">FedEx ($80)</a>
                         <br>
                         <br>
                     <% } %>
