--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -25,7 +25,7 @@
             
 
                 <p class="text-muted" style="text-align: center;margin-top: 10px;">
-                    <i class="fas fa-copyright"></i> 2020 Trademarkers LLC.
+                    <i class="fas fa-copyright"></i> <%= moment().format('Y') %> Trademarkers LLC
                 </p>
                 
                 
