--- a/views/trademark-order/thankyou.ejs
+++ b/views/trademark-order/thankyou.ejs
@@ -13,9 +13,9 @@
 
                     <p><strong>This is what will happen next:</strong></p>
                     <ul style="max-width: 600px;margin: auto;text-align:left">
-                    <li>the case will be assigned to one of our trademark attorneys licensed to represent you at the USPTO</li>
-                    <li>you will receive an email discussing the materials that the USPTO requires</li>
-                    <li>in the meantime, please prepare evidence of use – any photography, screen grabs of websites, printed catalogue samples etc.</li>
+                    <li>The case will be assigned to one of our trademark attorneys licensed to represent you at the USPTO</li>
+                    <li>You will receive an email discussing the materials that the USPTO requires</li>
+                    <li>In the meantime, please prepare evidence of use – any photography, screen grabs of websites, printed catalogue samples etc.</li>
                     </ul>
                 <% } else if (order.action.response == "Statement of Use") {%>
                     <h3>SUBMISSION OF STATEMENT OF USE</h3>
