--- a/views/layouts/public-layout-interactive.ejs
+++ b/views/layouts/public-layout-interactive.ejs
@@ -62,6 +62,10 @@
   <script src="/interactive/js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
   <!-- <script src="https://js.stripe.com/v3/"></script> -->
   <!-- <script src="/javascript/pay.js"></script> -->
+  <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script> -->
+
   <script>
 $( document ).ready(function() {
   $(".frm-sou").submit(function(){
@@ -69,9 +73,8 @@ $( document ).ready(function() {
     let action = $(this).attr('data-action');
     let number = $(this).attr('data-action-number');
     let response = $(this).attr('data-respond');
-
-    // alert(action);
-    // alert(response);
+    let name = $("#decName").val()
+    // let redUrl = 'pay';
 
     $.ajax({
       url: "/action/response/"+action+"/"+response,
@@ -79,45 +82,52 @@ $( document ).ready(function() {
       dataType:"json",
       data: {
         action: action,
-        response: response
+        response: response,
+        decName: name
       },
       contentType: "application/json",
       success: function( result ) {
-        $(location).attr('href', '/'+ number +'/pay')
+
+        if ( (response * 1) < 3) { alert(1);
+          $(location).attr('href', '/'+ number +'/pay')
+        } else { alert('2');
+          $(location).attr('href', '/')
+        }
+        
       }
     }); 
 
       return false;
   });
 
-  $(".btn-form-update").click(function(){
+  // $(".btn-form-update").click(function(){
     
-    let action = $(this).attr('data-action');
-    let response = $(this).attr('data-respond');
+  //   let action = $(this).attr('data-action');
+  //   let response = $(this).attr('data-respond');
 
-    if (confirm("Are you sure?")) {
-      $.ajax({
-        url: "/action/response/"+action+"/"+response,
-        type:"GET",
-        dataType:"json",
-        data: {
-          action: action,
-          response: response
-        },
-        contentType: "application/json",
-        success: function( result ) {
-          // alert('Thanks for !');
+   
+  //     $.ajax({
+  //       url: "/action/response/"+action+"/"+response,
+  //       type:"GET",
+  //       dataType:"json",
+  //       data: {
+  //         action: action,
+  //         response: response
+  //       },
+  //       contentType: "application/json",
+  //       success: function( result ) {
+  //         // alert('Thanks for !');
 
-          $(location).attr('href', '/')
-        }
-      }); 
-
-    } 
+  //         $(location).attr('href', '/')
+  //       }
+  //     }); 
 
     
 
-    return false;
-  });
+    
+
+  //   return false;
+  // });
 
 });
   </script>
