--- a/views/public/contact.ejs
+++ b/views/public/contact.ejs
@@ -68,9 +68,13 @@
 				
 				<div class="form-group">
 					<input type="name" class="form-control" id="name" value="" placeholder="Name" required name="name">
-				</div>
+                </div>
+                
 				<div class="form-group">
 					<input type="email" class="form-control" value="" placeholder="Email" id="email" name="email" required>
+                </div>
+                <div class="form-group" style="display:none">
+					<input type="text" class="form-control" id="email_confirm" value="" placeholder="Confirm Email"  name="email_confirm">
 				</div>
 				<div class="form-group">
 					<input type="text"  class="form-control" value="" id="phone" placeholder="Phone No." name="phone" >
