--- a/email-templates/noa-8weeks-plain.ejs
+++ b/email-templates/noa-8weeks-plain.ejs
@@ -25,7 +25,7 @@
   Dear <%= name[1] ? name[1].trim() : 'Trademarkers Client' %>,
 </p>
 <p style="margin:0">&nbsp;</p>
-<p >We still have not received any response from you in regards to the “Notice of Allowance” that was issued on <%= mailData.dateFiledFormatted %>, and you only have a <%= mailData.numberOfWeeks %> weeks left to file the “Statement of Use” or get an extension. In case you do neither, your trademark application is regarded as abandoned, and your trademark protection will be cancelled.
+<p >We still have not received any response from you in regards to the “Notice of Allowance” that was issued on <%= mailData.dateFiledFormatted %>, and you only have a <%= mailData.numberOfWeeks %> weeks left to file the “Statement of Use” or get an extension. In case you do neither, your trademark application is considered abandoned, and your trademark protection will be cancelled.
 <p style="margin:0">&nbsp;</p>
 <p >In case you are unable to declare use right now, you can file for an extension and get another 6 months (but there are limits after that).
 </p>
