--- a/views/public/contact.ejs
+++ b/views/public/contact.ejs
@@ -9,47 +9,6 @@
 
 		</div>
 
-        <!-- <div class="col-md-6">
-            <table class="table tbl-contact-info">
-                <tr>
-                    <th rowspan="2">Trademarkers LLC</th>
-                    <td>45 Essex Street, Suite 202</td>
-                </tr>
-                <tr>
-                    <td>Millburn NJ 07041</td>
-                </tr>
-
-                <tr>
-                    <td></td>
-                    <td></td>
-                </tr>
-
-                <tr>
-                    <th>Email Us</th>
-                    <td>info@trademarkers.com</td>
-                </tr>
-                <tr>
-                    <th>Toll-Free</th>
-                    <td>1-800-293-3166</td>
-                </tr>
-
-                <tr>
-                    <td></td>
-                    <td></td>
-                </tr>
-
-                <tr>
-                    <th>Office</th>
-                    <td>212-468-5500</td>
-                </tr>
-                <tr>
-                    <th>Fax</th>
-                    <td>212-504-0888</td>
-                </tr>
-
-            </table>
-
-        </div> -->
         <div class="col-md-12">
 			
 			<% if (flash.success) { %>
@@ -78,9 +37,18 @@
 				</div>
 				<div class="form-group">
 					<input type="text"  class="form-control" value="" id="phone" placeholder="Phone No." name="phone" >
+                </div>
+                <div class="form-group">
+					<select class="form-control" name="inquiry" id="inquiry">
+                        <option>-- Select Type of Inquiry --</option>
+                        <option value="Trademark Registration">Trademark Registration</option>
+                        <option value="Trademark Study">Trademark Study</option>
+                        <option value="Our Services">Our Services</option>
+                        <option value="Others">Others</option>
+                    </select>
 				</div>
-				<div class="form-group">
-					<textarea class="form-control" value="" rows="7" name="message" placeholder="Message" required></textarea>
+				<div class="form-group" id="messageContainer">
+					
 				</div>
 				<p class="text-center">
 					<button id="contact-btn-submit" type="submit" class="btn btn-primary btn-rounded-primary" style="padding-left:40px;padding-right:40px;">Submit</button>
