--- a/views/public/contact.ejs
+++ b/views/public/contact.ejs
@@ -39,7 +39,7 @@
 					<input type="text"  class="form-control" value="" id="phone" placeholder="Phone No." name="phone" >
                 </div>
                 <div class="form-group">
-					<select class="form-control" name="inquiry" id="inquiry">
+					<select class="form-control" name="inquiry" id="inquiry" required>
                         <option>-- Select Type of Inquiry --</option>
                         <option value="Trademark Registration">Trademark Registration</option>
                         <option value="Trademark Study">Trademark Study</option>
