--- a/views/partials/nav-common.ejs
+++ b/views/partials/nav-common.ejs
@@ -85,11 +85,11 @@
                     </div>
                 </div>
             </li> 
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a href="/contact">
                     Contact
                 </a>
-            </li> 
+            </li>  -->
             <li class="nav-item">
                 <div class="dropdown">
                     <a id="dropdownMenuButton2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#" class="dropdown-toggle">
